---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: ????
  Changes:
    - All events will be enabled when LUA Event Trace is loaded
    - [BREAKING] multi-target events (circuit network merged, circuit network created, circuit network split, circuit network destroyed) will be fired as a single event instead of individual events. See documentation for details
    - Optimized circuit network event firing to decrease API calls and fewer loop traversals
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2026-01-12
  Changes:
    - Does not default to generating circuit connectors unless required. Should help increase performance as more things are done
  Bugfixes:
    - Fixed a crash when circuit connecters were invalid. Resolves https://github.com/protocol-1903/perel/issues/9
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2025-12-04
  Changes:
    - Added perel.enabled_events and perel.event_categories for easy checking of which events have been registered to listen to
    - Updated validification for event firing
    - Added support for universal event registration for testing and development purposes
  Bugfixes:
    - Fixed a crash when placing a wall
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2025-11-23
  Changes:
    - Made the perel framework global
    - Generalized post event subtick handler
    - Split cirucit network handlers into it's own file
    - Merged event firing into handlers
    - Cache valid wire connection targets
  Bugfixes:
    - Fixed a crash when wire_destination is not valid
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2025-11-19
  Changes:
    - Removed log spam